# serverless-starter

./: .gitignore  README.md
event-handler/: Dockerfile  pyproject.toml
event-handler/src/event_handler/: Dockerfile  __init__.py  main.py
event-handler/tests/: test_event_handler.py
frontend/: index.html.hbs  index.js  package.json
terraform/: backend.tf  event-handler.tf  frontend.tf  locals.tf  prereqs.md  provider.tf  shared.tf  variables.tf
